[package]
name = "device-checkout-lib"
version = "0.2.3"
authors = ["Toby Smith <toby@tismith.id.au>"]
license = "MIT"

[profile.release]
lto = true

[dependencies]
failure = "0.1.1"
log = "0.4.3"
stderrlog = "0.4.1"
clap = "2.32.0"
rocket = "0.3.15"
rocket_codegen = "0.3.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel_migrations = "1.2.0"
exitfailure = "0.5.0"
validator = "0.7.1"
validator_derive = "0.7.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.3.15"
default-features = false
features = ["json", "handlebars_templates"]

[dependencies.diesel]
version = "1.3.0"
features = ["sqlite", "chrono", "r2d2"]

[dependencies.diesel-derive-enum]
version = "0.4.4"
features = ["sqlite"]

[dev-dependencies]
assert_cli = "0.6"
tempfile = "3.0"
victoria-dom = "0.1"
