[package]
name = "device-checkout-lib"
version = "0.2.3"
authors = ["Toby Smith <toby@tismith.id.au>"]
license = "MIT"

[profile.release]
lto = true

[dependencies]
failure = "0.1.5"
log = "0.4.6"
stderrlog = "0.4.1"
clap = "2.32.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
diesel_migrations = "1.2.0"
exitfailure = "0.5.1"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "handlebars_templates"]

[dependencies.diesel]
version = "1.3.3"
features = ["sqlite", "chrono", "r2d2"]

[dependencies.diesel-derive-enum]
version = "0.4.4"
features = ["sqlite"]

[dev-dependencies]
assert_cli = "0.6"
tempfile = "3.0.5"
victoria-dom = "0.1"
